--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,17 @@
 .App{
   background: #ECE4FD;
   background-size: cover;
-  height: 550vh;
+  height: 600vh;
+}
+
+@media (min-width: 768px){
+  .App{
+    height: 500vh;
+  }
 }
 
 @media (min-width: 991px){
   .App{
-    height: 250vh;
+    height: 300vh;
   }
 }
