--- a/frontend/src/components/Styles/IISMA.css
+++ b/frontend/src/components/Styles/IISMA.css
@@ -1,6 +1,7 @@
 .iisma-panel {
   background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../Assets/bg-iisma.jpg);
   border-radius: 10px;
+  padding: 20px;
   height: 500px;
   width: 440px;
 }
@@ -90,6 +91,7 @@
   width: 250px;
 }
 .rata-text {
+  margin-top: 40px;
   font-size: large;
   text-align: center;
 }
@@ -171,6 +173,7 @@
     width: 320px;
   }
   .rata-text {
+    margin-top: 30px;
     font-size: large;
     text-align: center;
   }
