--- a/frontend/src/components/Styles/Home.css
+++ b/frontend/src/components/Styles/Home.css
@@ -57,7 +57,7 @@
 }
 
 .testi-panel{
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 10px;
     height: 1670px;
     width: 440px;
