--- a/frontend/src/components/Styles/Home.css
+++ b/frontend/src/components/Styles/Home.css
@@ -8,15 +8,15 @@
 }
 
 .info-panel img {
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 200px;
   margin-top: -10px;
   margin-left: 40px;
 }
 .text-head {
   text-align: center !important;
   margin-left: 0px !important;
-  margin-top: -30px !important;
+  margin-top: -50px !important;
   color: #531cb9;
   padding: 10px;
   font-size: x-large;
@@ -69,8 +69,8 @@
 .bima {
   background-color: #ece4fd;
   border-radius: 12px;
-  height: 490px;
-  width: 300px;
+  height: 490px !important;
+  width: 300px !important;
 }
 
 .bima img {
@@ -84,8 +84,8 @@
 .Al {
   background-color: #ece4fd;
   border-radius: 12px;
-  height: 490px;
-  width: 300px;
+  height: 490px !important;
+  width: 300px !important;
 }
 
 .Al img {
@@ -100,8 +100,8 @@
   font-size: 14px;
   background-color: #ece4fd;
   border-radius: 12px;
-  height: 490px;
-  width: 300px;
+  height: 490px !important;
+  width: 300px !important;
 }
 
 .Enggar img {
