fix layout companycamp

--- a/frontend/src/components/Styles/Companycamp.css
+++ b/frontend/src/components/Styles/Companycamp.css
@@ -2,15 +2,17 @@
     background-color: #e0d7f6;
     align-items: center;
     border-radius: 10px;
-    height: 920px;
+    height: 960px;
     width: 440px;
 }
-.text-head{
-    text-align: left;
+.text-head-company{
+    color: #531CB9;
+    text-align: center;
     padding: 40px;
     font-size:xx-large ;
     font-style: oblique;
     font-weight: bolder;
+
 }
 .text-head-act{
     text-align: center;
@@ -19,150 +21,174 @@
     font-size: xx-large ;
     font-weight: bolder;
 }
-.text-act{
-    text-align: center;
-    font-size: medium;
-    font-weight: bold;
-}
+
 .company-img{
     align-items: left;
     width: 350px;
     height: 350px;
     margin-left: 30px;
+    margin-top: -5px;
 }
-
-.offer-img{
-    border-radius: 360px;
-    width: 300px;
-    margin-left: 55px;
-}
-
 
 .text-company{
     margin-top: 20px;
 }
 
-.card {
+.card-company {
     background-color: #e0d7f6;
     height: 330px;
     width: 440px;
 }
-.card-text{
+.card-text-company{
     font-size: large;
+    margin-top: 10px;
 }
-.offer-img{
-    height: 260px;
+.act-company-img{
+    border-radius: 360px;
+    width: 290px;
+    height: 250px;
+    margin-left: 58px;
+    margin-top: 10px;
+    align-items: center;
 }
 
-.btn-group .btn {
-    margin-top: 90px;
-    align-items: left;
-    margin-left: -250px;
-  }
+.klik-company {
+    margin-top: 20px;
+    align-items: center;
+}
 
 @media (min-width: 768px){
-    .company-panel{
-        background-color: #e0d7f6;
-        align-items: center;
-        border-radius: 10px;
-        height: 850px;
-        width: 440px;
-    }
-    .text-head{
-        text-align: left;
-        font-size:xx-large ;
-        font-style: oblique;
-        font-weight: bolder;
-        padding-top: 50px;
-    }
-    .text-head-act{
-        text-align: center;
-        color: #531CB9;
-        padding: 30px;
-        font-size: xx-large ;
-        font-weight: bolder;
-    }
-    .text-act{
-        padding-top: 20px;
-        text-align: center;
-        font-size: medium;
-        font-weight: bold;
-    }
-    .company-img{
-        align-items: center;
-        width: 350px;
-        height: 350px;
-        margin-left: 170px;
-    }
-    .offer-img{
-        border-radius: 360px;
-        width: 300px;
-        margin-left: 55px;
-    }
-    
-    
-    .text-company{
-        margin-top: 30px;
-    }
+.company-panel{
+    background-color: #e0d7f6;
+    align-items: center;
+    border-radius: 10px;
+    height: 850px;
+    width: 440px;
+}
 
-    .btn-group .btn {
-        margin-top: 110px;
-        align-items: left;
-        margin-left: -250px;
-      }
+.text-head-company{
+    text-align: center;
+    font-size:xx-large ;
+    font-style: oblique;
+    font-weight: bolder;
+}
+
+    .text-head-act{
+    text-align: center;
+    color: #531CB9;
+    padding: 30px;
+    font-size: xx-large ;
+    font-weight: bolder;
+}
+
+    .text-act{
+    padding-top: 20px;
+    text-align: center;
+    font-size: medium;
+    font-weight: bold;
+}
+
+    .company-img{
+    align-items: center;
+    width: 350px;
+    height: 350px;
+    margin-left: 170px;
+}
+
+    .act-company-img{
+    border-radius: 360px;
+    width: 220px;
+    height: 220px;
+    margin-left: 48px;
+    margin-top: 10px;
+}
+
+    .card-company {
+    background-color: #e0d7f6;
+    height: 310px;
+    width: 350px;
+}
+
+    .card-text-company{
+    font-size: large;
+    margin-top: 10px;
+}
+
+.text-company{
+    margin-top: 30px;
+}
+
+.klik-company {
+    margin-top: 20px;
+    align-items: center;
+}
 }
 
 @media (min-width: 991px){
-    .company-panel{
-        background-color: #e0d7f6;
-        align-items: center;
-        border-radius: 10px;
-        height: 500px;
-        width: 440px;
-    }
-    .text-head{
-        text-align: left;
-        font-size:xx-large ;
-        font-style: oblique;
-        font-weight: bolder;
-        padding-top: 50px;
-    }
+.company-panel{
+    background-color: #e0d7f6;
+    align-items: center;
+    border-radius: 10px;
+    height: 500px;
+    width: 440px;
+}
+
+    .text-head-company{
+    text-align: left;
+    color: #531CB9;
+    font-size:xx-large ;
+    font-style: oblique;
+    font-weight: bolder;
+    padding: 10px;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
     .text-head-act{
-        text-align: center;
-        color: #531CB9;
-        padding: 30px;
-        font-size: xx-large ;
-        font-weight: bolder;
-    }
+    text-align: center;
+    color: #531CB9;
+    padding: 30px;
+    font-size: xx-large ;
+    font-weight: bolder;
+}
+
     .company-img{
-        align-items: left;
-        width: 350px;
-        height: 350px;
-        margin-left: 20px;
-    }
-    .offer-img{
-        border-radius: 360px;
-        width: 300px;
-        margin-left: 55px;
-    }
+    align-items: left;
+    width: 350px;
+    height: 350px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
     
-    .text-company{
-        margin-top: 80px;
-    }
+.text-company{
+    margin-top: 130px;
+    font-size: medium;
+    margin-left: -50px;
+}
 
-    .card {
-        background-color: #e0d7f6;
-        height: 330px;
-        width: 440px;
-    }
+.act-company-img{
+    border-radius: 360px;
+    width: 300px;
+    height: 260px;
+    margin-left: 53px;
+    margin-top: 10px;
+}
 
-    .card-text{
-        font-size: large;
-    }
+    .card-company {
+    background-color: #e0d7f6;
+    height: 350px;
+    width: 440px;
+}
 
-    .btn-group .btn {
-        margin-top: 100px;
-        align-items: left;
-        margin-left: -250px;
-      }
+    .card-text-company{
+    font-size: large;
+    margin-top: 8px;
+    text-align: center;
+}
+
+.klik-company {
+    margin-top: 20px;
+    align-items: center;
+}
+
 }
