--- a/frontend/src/components/Styles/Home.css
+++ b/frontend/src/components/Styles/Home.css
@@ -16,7 +16,7 @@
 .text-head {
   text-align: center !important;
   margin-left: 0px !important;
-  margin-top: -50px !important;
+  margin-top: 20px;
   color: #531cb9;
   padding: 10px;
   font-size: x-large;
@@ -118,7 +118,7 @@
   .text-head {
     text-align: center !important;
     margin-left: 0px !important;
-    margin-top: -10px !important;
+    margin-top:30px !important;
     color: #531cb9;
     padding: 10px;
     font-size: x-large;
