updated homepage file

--- a/frontend/src/components/Styles/AboutUS.css
+++ b/frontend/src/components/Styles/AboutUS.css
@@ -1,31 +1,28 @@
-.AboutUs{
-    height: 195vh !important ;
 
-}
 .info-panell{
     background-color: blueviolet;
     align-items: center;
     border-radius: 10px;
-    height: 1200px;
-    width: 440px;
+    height: 1200px ;
+    width: 440px ;
    
 }
 .goals-panel{
-    background-color:#a38bd9;
+    background-color:#a38bd9 ;
     align-items: center;
     border-radius: 10px;
-    height: 966px;
-    width: 440px;
+    height: 986px ;
+    width: 440px  ;
     
 }
 
 .scholarship{
-    background-color: #9d74da;
+    background-color: #9d74da !important;
     color: white;
     border-radius: 10px;
-    height: 250px;
-    width: 200px;
-    margin-top: -7px;
+    height: 250px !important;
+    width: 200px !important;
+    margin-top: -7px ;
     margin-left: 100px;
  
 }
@@ -40,22 +37,22 @@
 }
 
 .career{
-    background-color: #9d74da;
+    background-color: #9d74da !important;
     color: white;
     border-radius: 10px;
-    height: 250px;
-    width: 200px;
+    height: 250px !important;
+    width: 200px !important;
     margin-left: 100px;
     margin-top: -7px; 
 }
 
 
 .skilldevelopment{
-    background-color: #9d74da;
+    background-color: #9d74da !important;
     color: white;
     border-radius: 10px;
-    height: 250px;
-    width: 200px;
+    height: 250px !important;
+    width: 200px !important;
     margin-left: 100px;
     margin-top: -7px; 
 }
@@ -66,25 +63,25 @@
     
     }
     .info-panell{
-        background-color: blueviolet;
+        background-color: blueviolet !important;
         align-items: center;
         border-radius: 10px;
         height: 355px;
         width: 440px;
     }
     .goals-panel{
-        background-color:#a38bd9;
+        background-color:#a38bd9 !important;
         border-radius: 10px;
         height: 1000px;
         width: 600px;
     }
     
     .scholarship{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-top: -7px;
         margin-left: 100px; 
     }
@@ -99,22 +96,22 @@
     }
     
     .career{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 100px;
         margin-top: -7px; 
     }
     
     
     .skilldevelopment{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 100px;
         margin-top: -7px; 
     }
@@ -135,11 +132,11 @@
         width: 440px;
     }
     .scholarship{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-top: -7px;
         margin-left: 100px; 
     }
@@ -154,22 +151,22 @@
     }
     
     .career{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 100px;
         margin-top: -7px; 
     }
     
     
     .skilldevelopment{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 100px;
         margin-top: -7px; 
     }
@@ -188,11 +185,11 @@
         width: 440px;
     }
     .scholarship{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-top: -7px;
         margin-left: 140px; 
     }
@@ -207,22 +204,22 @@
     }
     
     .career{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 80px;
         margin-top: -7px; 
     }
     
     
     .skilldevelopment{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 20px;
         margin-top: -7px; 
     }
@@ -245,11 +242,11 @@
         width: 440px;
     }
     .scholarship{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-top: -7px;
         margin-left: 140px; 
     }
@@ -264,22 +261,22 @@
     }
     
     .career{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 80px;
         margin-top: -7px; 
     }
     
     
     .skilldevelopment{
-        background-color: #9d74da;
+        background-color: #9d74da !important;
         color: white;
         border-radius: 10px;
-        height: 250px;
-        width: 200px;
+        height: 250px !important;
+        width: 200px !important;
         margin-left: 20px;
         margin-top: -7px; 
     }
