--- a/frontend/src/components/Styles/IISMA.css
+++ b/frontend/src/components/Styles/IISMA.css
@@ -5,23 +5,26 @@
   height: 500px;
   width: 440px;
 }
+.iism{
+  margin-top: 0px !important;
+}
 .iisma-panel img {
   height: auto;
   width: 300px;
-  margin-top: 10px;
+  margin-top: -20px;
 }
 
 .body {
   font-size: smaller;
-  margin-top: -20px;
+  margin-top: -30px;
   padding: 20px;
   text-align: center;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 0.23px;
 }
-.btn-group {
+.tombol-group {
   align-items: center;
-  margin-top: -20px;
+  margin-top: -20px !important;
 }
 .benefits .row {
   border-radius: 10px;
@@ -35,7 +38,7 @@
   font-size: larger;
 }
 .relation {
-  background-color: #ffffff;
+  background-color: #ffffff !important;
   border-radius: 12px;
   height: 310px;
   width: 440px;
@@ -47,7 +50,7 @@
   width: 170px;
 }
 .tips {
-  background-color: #ffffff;
+  background-color: #ffffff !important;
   border-radius: 12px;
   height: 310px;
   width: 440px;
@@ -60,7 +63,7 @@
   width: 170px;
 }
 .brain {
-  background-color: #ffffff;
+  background-color: #ffffff !important;
   border-radius: 12px;
   height: 310px;
   width: 440px;
@@ -73,7 +76,7 @@
   width: 170px;
 }
 .discuss {
-  background-color: #ffffff;
+  background-color: #ffffff !important;
   border-radius: 12px;
   height: 310px;
   width: 440px;
@@ -100,13 +103,16 @@
     padding: 20px;
   }
   .iisma-panel img {
-    margin-top: 20px;
+    margin-top: -20px;
+  }
+  .iism{
+    margin-top: -50px;
   }
   .body {
     padding: 37px;
     margin-top: -25px;
   }
-  .btn-group {
+  .tombol {
     align-items: center;
     margin-top: -35px;
   }
@@ -114,8 +120,8 @@
   .relation {
     background-color: #ffffff;
     border-radius: 12px;
-    height: 310px;
-    width: 350px;
+    height: 310px !important;
+    width: 350px !important;
   }
   .relation img {
     margin-top: 30px;
@@ -126,8 +132,8 @@
   .tips {
     background-color: #ffffff;
     border-radius: 12px;
-    height: 310px;
-    width: 350px;
+    height: 310px !important;
+    width: 350px !important;
   }
   .tips img {
     margin-top: 30px;
@@ -139,8 +145,8 @@
   .brain {
     background-color: #ffffff;
     border-radius: 12px;
-    height: 310px;
-    width: 350px;
+    height: 310px !important;
+    width: 350px !important;
   }
   .brain img {
     margin-top: 30px;
@@ -152,8 +158,8 @@
   .discuss {
     background-color: #ffffff;
     border-radius: 12px;
-    height: 310px;
-    width: 350px;
+    height: 310px !important;
+    width: 350px !important;
   }
   .discuss img {
     margin-top: 30px;
@@ -185,6 +191,9 @@
   }
   .iisma-panel img {
     margin-top: 60px;
+  }
+  .iism{
+    margin-top: 0px !important;
   }
   .body {
     padding: 50px;
